{
    "name": "InputActions",
    "maps": [
        {
            "name": "GameplayMap",
            "id": "a0114d95-ea79-48eb-b022-3b4fcd40c0ea",
            "actions": [
                {
                    "name": "SelectMovePosition",
                    "type": "Button",
                    "id": "cd1f4c86-a0fd-4f05-8002-f3667a79df61",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AoeAbility",
                    "type": "Button",
                    "id": "27d3a324-cc2f-47e1-a602-622f8ac145b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SkillShotAbility",
                    "type": "Button",
                    "id": "0e60f4c6-453b-4703-8637-d4284c0f97f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ConfirmSkillShotAbility",
                    "type": "Button",
                    "id": "f2febb09-e5aa-4761-a3d8-f2f174e22792",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "499c236d-3691-4c14-a4a7-9751365c9340",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SelectMovePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7f26c0b-02dd-480f-90ab-427b5e41aaa7",
                    "path": "<Keyboard>/#(Q)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AoeAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "000a9887-b975-4a53-9c97-b0daf39b68d6",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SkillShotAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "50870dd8-38ff-4486-bac9-3e1dc5e197a1",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmSkillShotAbility",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}